results/classifier/111/review/1878628
other: 0.140
semantic: 0.122
PID: 0.109
graphic: 0.108
vnc: 0.096
device: 0.085
files: 0.066
network: 0.050
performance: 0.045
debug: 0.042
permissions: 0.042
socket: 0.039
boot: 0.036
KVM: 0.020
files: 0.264
debug: 0.233
other: 0.138
PID: 0.060
semantic: 0.049
device: 0.042
network: 0.038
performance: 0.035
boot: 0.028
KVM: 0.027
graphic: 0.025
socket: 0.023
permissions: 0.020
vnc: 0.017

linux-user/mmap build failure using Clang 10

When building with Clang 10 on Fedora 32, we get:

    CC      linux-user/mmap.o
  linux-user/mmap.c:720:49: error: result of comparison 'unsigned long' > 18446744073709551615 is always false [-Werror,-Wtautological-type-limit-compare]
          if ((unsigned long)host_addr + new_size > (abi_ulong)-1) {
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~

Suggested fix: Use -Wno-tautological-type-limit-compare in configure:

https://<email address hidden>/msg699808.html


Patch posted:
https://lists.gnu.org/archive/html/qemu-devel/2020-06/msg00856.html

Merged as commit aabab96797a7d61989c25a7ca2b094591bbc74f9.

